# DESSN5YR_TESTDR

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
dessndr/: __init__.py  data.py  plot.py  utils.py
dessndr/scripts/: download_dessndr.py
docs/: 0_DATA.rst  1_SIMULATIONS.rst  2_LCFIT_MODEL.rst  3_CLASSIFICATION.rst  4_DISTANCES_COVMAT.rst  5_COSMOLOGY.rst  6_DCR_CORRECTIONS.rst  7_PIPPIN_FILES.rst  Makefile  conf.py  desSNprogram.rst  index.rst  make.bat  releaseDetails.rst  requirements.txt
docs/_static/: links.rst
docs/release/: 0_DATA.rst  1_SIMULATIONS.rst  2_LCFIT_MODEL.rst
docs/tutorial/: 01-load_data.ipynb  02-dessn_fwcdm.ipynb  03-Classification.ipynb  03-load_lcplot.ipynb  04-HubbleDiagram.ipynb  05-LambdaDependentCorrections.ipynb  extra-01-dessn_fwcdm.ipynb  index.rst
